	the names of all arguments must be written in full. This change
	can be expected to cause trouble outside vegan. Currently the
	tests in examples are passed, but tests fail (looks like being
	caused by the change in API). 

	* add1.cca, drop1.cca, ordistep, ordiR2step: functions were
	adapted to new anova.cca and this brought along similar changes in
	API. 
	
Version 2.1-39 (closed December 3, 2013)

	* anova.cca: started to rewrite the anova.cca family of functions
	for permute package. At the first stage, a temporary development
	function anovacca was created. The user interface was changed, and
	the function no more adapts the number of iterations for the
	P-value, and arguments 'step' and 'perm.max' were removed.
	Instead, permute package is used to create a permutation matrix
	used in all cases with fixed number of permutations.

	In addition to the overall test, the function allows now testing
	a sequence of models (anova.ccalist). Specific tests provided are
	by = "term" (anovacca.byterm) which is fitted as a sequence of
	models in anova.ccalist. Case by = "margin" directly calls
	permutest.cca and gets the significances from differences of
	residual variation similarly as anova.ccalist. Case by = "axis" is
	is implemented as a marginal model.

	Simple permutations give identical results for "term" and "axis"
	cases, but by = "margin" is different. Marginal models were
	implemented as partial models with other parameters partialled out
	in vegan 2.0 and earlier, but the current implementation is an
	anova.ccalist model where the parameter in question was removed
	and model compared against the complete model.

	* commsim: documentation (commsim.Rd) was restructured so that
	nullmodels were collected under separate sections with a brief
	introductory text and shorter specific text of the
	algorithm. Hopefully this makes easier for an outsider to grasp
	the width of the choices.

	* oecosimu: change printed quantiles to match the direction of the